--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,39 @@
 body{
-    background-color: rgb(212, 216, 255);
+    background-color: rgb(230, 252, 237);
     margin: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 p{
-    color: crimson;
+    color: rgb(60, 189, 0);
     font-size: larger;
     margin-bottom: 20px;
     border: darkblue;
 }
 
 img{
-
+    border: solid 1px red;
+    padding: 10px;
+    width: 250px;
+    opacity: 0,5;   
 }
 
 h1{
-    color: darkmagenta;
+    color:red;
+    font-size: 16px;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 h2{
-    color: darkred;
+    color: rgb(87, 11, 11);
+}
+
+a:link {
+    color: red;
+}
+
+a:hover{
+    color: blue;
+    text-decoration: underline;
 }
